--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,18 +8,18 @@
   height: 100%;
   text-align: center;
   font-size: 4rem;
-  margin: 0.8% 0 0 3%;
+  margin: 0.5% 0 0 2%;
 }
 
 .searchBar {
-  height: 8%;
-  align-self: center;
+  height: 3vh;
+  margin-top: 1%;
   margin-right: 5%;
-  width: 20%;
+  width: 25%;
   border-radius: 80px;
   border: 1px solid;
   font-size: 1.2em;
-  padding: 1%;
+  padding: .5%;
   display: flex;
   justify-content: flex-end;
 }
