--- a/src/components/displayPage/repo.css
+++ b/src/components/displayPage/repo.css
@@ -1,6 +1,4 @@
 .repoContainer{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    flex-direction: column;
+    height: 15vh;
+    margin-left: 20%;
 }
