--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -11,11 +11,13 @@
   margin: 0.5% 0 0 2%;
 }
 
+.formContainer{
+  margin-right: 5%;
+}
+
 .searchBar {
   height: 3vh;
   margin-top: 1%;
-  margin-right: 5%;
-  width: 25%;
   border-radius: 80px;
   border: 1px solid;
   font-size: 1.2em;
