--- a/src/components/Styles/repo.css
+++ b/src/components/Styles/repo.css
@@ -1,4 +1,76 @@
-.repoContainer{
-    height: 15vh;
-    margin-left: 5vw;
+.reposContainer{
+    margin-top: 7%;
 }
+
+.outerRepoContainer{
+    border-top: 1px solid var(--tint);
+    margin-left: 2vw;
+}
+
+.repoContainer{
+    height: 20%;
+    padding: 2%;
+    width: 55vw;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+
+.leftSideContainer{
+    height: 12vh;
+}
+
+.leftSideContent{
+    margin-top: 2vh;
+}
+
+.repoDescription{
+    display: inline-block;
+    max-width: 70ch;
+    font-family: var(--font-mono);
+}
+
+.descriptionContainer{
+    text-align: center;
+}
+
+.showDescriptionButtonContainer{
+    position: absolute;
+    left: 45%;
+    top: 75%;
+}
+
+.showDescriptionButton{
+    color: var(--lightest-slate);
+    font-size: var(--fz-md);
+    cursor: pointer;
+}
+
+.showDescriptionButton:hover{
+    color: var(--green);
+
+}
+
+.forkAndStarContainer{
+    margin-left: 3%;
+}
+
+.fa-star:hover{
+    color: var(--green);
+    animation-name: star-spin;
+    animation-duration: 1000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; 
+}
+
+
+
+@keyframes star-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  } 
