--- a/src/components/Styles/variables.css
+++ b/src/components/Styles/variables.css
@@ -5,12 +5,12 @@
     --lightest-navy: #233554;
     --navy-shadow: rgba(2, 12, 27, 0.7);
     --dark-slate: #495670;
-    --slate: #8892b0;
+    --slate: #8690ad;
     --light-slate: #a8b2d1;
     --lightest-slate: #ccd6f6;
     --white: #e6f1ff;
     --green: #64ffda;
-    --green-tint: rgba(100, 255, 218, 0.1);
+    --tint: rgba(129, 128, 165, 0.4);
     --blue: #57cbff;
     --font-sans: 'Calibre', 'Inter', 'San Francisco', 'SF Pro Text', -apple-system, system-ui,
       sans-serif;
