--- a/src/components/Styles/commit.css
+++ b/src/components/Styles/commit.css
@@ -1,5 +1,77 @@
 @import './variables.css';
 
+.commitsContainer{
+    width: 60vw;
+    margin: 0 auto;
+    border-radius: 50px;
+    box-shadow: 0 0 10px 0 var(--navy-shadow);
+    margin-top: 3%;
+}
+
+.commitsHeader{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--white);
+    padding: 1.5%;
+}
+
+.commitsTitle{
+    padding: 1%;
+    padding-top: 2%;
+}
+
+.sortByContainer{
+    margin: 1.5% 3%;
+    width: 6vw;
+    border: 1px solid var(--slate);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .7%;
+    border-radius: 50px;
+}
+
+.sortByHeading{
+    padding-left: 5%;
+}
+
+.fa-sort-down{
+    padding: 0 8px 5px 8px;
+}
+
 .commitContainer{
-    padding: 2%;
+    border-bottom: 1px solid var(--tint);
+}
+
+.messageContainer{
+    padding: 2% 1.5% 1.5% 1.5%;
+    font-size: 1.2rem;
+    font-family: var(--font-mono);
+}
+
+.dateNameHashContainer{
+    display: flex;
+    justify-content: space-between;
+    padding: 1.3% 0 2% 2%;
+    width: 93%;
+    margin: 0 auto;
+    color: var(--slate);
+}
+
+.dateNameContainer{
+    display: flex;
+    width: 15vw;
+    justify-content: space-between;
+}
+
+.shaContainer{
+    width: 20vw;
+}
+
+.dateContainer{
+    width: 40%;
+}
+
+i:hover{
+    color: var(--green);
 }
