--- a/src/components/Styles/commit.css
+++ b/src/components/Styles/commit.css
@@ -1,77 +1,223 @@
-@import './variables.css';
+@import "./variables.css";
 
-.commitsContainer{
-    width: 60vw;
-    margin: 0 auto;
-    border-radius: 50px;
-    box-shadow: 0 0 10px 0 var(--navy-shadow);
-    margin-top: 3%;
+.commitsContainer {
+  width: 60vw;
+  margin: 0 auto;
+  border-radius: 50px;
+  box-shadow: 0 0 10px 0 var(--navy-shadow);
+  margin-top: 3%;
+  position: relative;
 }
 
-.commitsHeader{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid var(--white);
-    padding: 1.5%;
+.commitsHeader {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--white);
+  padding: 1.5%;
 }
 
-.commitsTitle{
-    padding: 1%;
-    padding-top: 2%;
+.commitsTitle {
+  padding: 1%;
+  padding-top: 2%;
+  color: var(--white);
 }
 
-.sortByContainer{
-    margin: 1.5% 3%;
-    width: 6vw;
-    border: 1px solid var(--slate);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: .7%;
-    border-radius: 50px;
+.sortByContainer {
+  margin: 1.5% 3%;
+  width: 4vw;
+  border: 1px solid var(--slate);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.7%;
+  border-radius: 50px;
+  cursor: pointer;
 }
 
-.sortByHeading{
-    padding-left: 5%;
+.sortByContainer:hover {
+  border: 1px solid var(--lightest-slate);
+  background-color: var(--navy);
 }
 
-.fa-sort-down{
-    padding: 0 8px 5px 8px;
+.sortByHeading {
+  padding-left: 5%;
 }
 
-.commitContainer{
-    border-bottom: 1px solid var(--tint);
+.fa-sort-down {
+  padding: 0 8px 5px 8px;
 }
 
-.messageContainer{
-    padding: 2% 1.5% 1.5% 1.5%;
-    font-size: 1.2rem;
-    font-family: var(--font-mono);
+.commitContainer {
+  border-bottom: 1px solid var(--tint);
 }
 
-.dateNameHashContainer{
-    display: flex;
-    justify-content: space-between;
-    padding: 1.3% 0 2% 2%;
-    width: 93%;
-    margin: 0 auto;
-    color: var(--slate);
+.messageContainer {
+  padding: 2% 1.5% 1.5% 1.5%;
+  font-size: 1.2rem;
+  font-family: var(--font-mono);
+  color: var(--green);
+  margin: 1%;
 }
 
-.dateNameContainer{
-    display: flex;
-    width: 15vw;
-    justify-content: space-between;
+.dateNameHashContainer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.3% 0 2% 2%;
+  width: 93%;
+  margin: 0 auto;
+  color: var(--slate);
 }
 
-.shaContainer{
-    width: 20vw;
+.dateNameContainer {
+  display: flex;
+  width: 50%;
+  justify-content: flex-start;
 }
 
-.dateContainer{
+.shaContainer {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.fa-dashcube{
+    padding-right: 2%;
+}
+
+.dateContainer {
+  width: 40%;
+  display: flex;
+}
+
+.nameContainer{
     width: 40%;
+    display: flex;
 }
 
-i:hover{
+.fa-user{
+  padding-right: 2%;
+}
+
+.fa-calendar{
+  padding-right: 2%
+}
+
+i:hover {
+  color: var(--green);
+}
+
+.dropDownContainer {
+  width: 11vw;
+  height: 11.5vh;
+  border: 1px solid;
+  position: absolute;
+  top: 2.2%;
+  right: 4%;
+  background-color: var(--dark-navy);
+}
+
+.dropDownHeader {
+  padding: 3%;
+  border-bottom: 1px solid var(--slate);
+}
+
+.dropDownSelection {
+  padding: 5%;
+  cursor: pointer;
+  opacity: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.dropDownSelection:hover {
+    opacity: 100%;
+}
+
+.mostRecentSelection {
+  border-bottom: 1px solid var(--tint);
+}
+
+.fa-check{
     color: var(--green);
+}
+
+
+@media screen and (max-width: 1100px) {
+    .sortByContainer {
+        width: 7vw;
+    }
+
+    .dateNameHashContainer{
+      flex-direction: column;
+      width: 100%;
+    }
+
+    .shaContainer{
+      justify-content: flex-start;
+      padding-top: 3%;
+    }
+
+    .dateNameContainer{
+      width: 100%;
+    }
+
+    .dropDownContainer{
+      top: 1.3%;
+      width: 15vw;
+    }
+    
+}
+
+@media screen and (max-width: 770px) {
+  .dropDownContainer{
+    top: 1.3%;
+    width: 20vw;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .sortByContainer {
+    width: 12vw; 
+  }
+
+  .shaContainer {
+    overflow: scroll;
+    height: 5vw;
+    width: 90%;
+    margin: 2%;
+  }
+
+  .dateNameContainer{
+    flex-direction: column;
+  }
+
+  .nameContainer{
+    width: 100%;
+    margin: 2%;
+  }
+
+  .dateContainer{
+    width: 100%;
+    margin: 2%;
+  }
+
+  .messageContainer{
+    font-size: 1rem;
+    overflow: scroll;
+  }
+
+  .dropDownContainer{
+    top: 1%;
+    width: 35vw;
+    height: 11.1vh;
+  }
+
+  p{
+    font-size: .9rem;
+  }
+
+  i{
+    font-size: .9rem;
+  }
+
 }
