--- a/src/components/Styles/profileInfo.css
+++ b/src/components/Styles/profileInfo.css
@@ -28,3 +28,20 @@
     color: var(--green);
     transition: .5s;
 }
+
+@media screen and (max-width: 850px) {
+    .profileContainer{
+        margin-top: 5%;
+        width: 70%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .avatarImg{
+        height: 20vh;
+    }
+    .profileContainer{
+        height: 30vh;
+    }
+}
